# shashi/tutorial/server/public/swagger.json
@@ -688,6 +688,33 @@
 						}
 					}
 				]
+			},
+			"delete": {
+				"operationId": "DeleteTutorial",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					}
+				},
+				"tags": [
+					"tutorial"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
 			}
 		},
 		"/categorys": {
